--- a/template.html
+++ b/template.html
@@ -3,12 +3,13 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <title>Hello Rigo with Vanilla.js</title>
-       
+        <title>Todo list with hooks</title>
+
+       <link rel="stylesheet" href="/workspace/react-hello/src/styles/index.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     </head>
-    <body>
+    <body >
         <div id="app"></div>
 
         <!-- Many of bootstrap components require the use of JavaScript to function -->
